# Contentio

./: README.md  README_en.md
backend/: .env  .gitignore  Cargo.toml  memo.md
backend/dataBase/: readme.md
backend/dataBase/migrations/: 20260120135740_create_rooms_table.sql
backend/migrations/: 20260317012148_create_users.sql  20260317014820_add_password_and_avatar.sql  20260320041137_create_contests.sql  20260320041854_create_tasks.sql  20260320042020_add_is_admin_to_users.sql  20260320051328_create_contest_tasks.sql  20260320061901_create_judge_tables.sql  20260320090622_add_is_rated_to_contests.sql  20260320094539_create_system_logs.sql  20260320123137_add_description_to_contests.sql
backend/src/: handlers.rs  main.rs  models.rs
fronted/: index.html  package-lock.json  package.json
fronted/src/: App.tsx
fronted/src/components/: AdminRoute.tsx  Layout.tsx  ProtectedRoute.tsx
fronted/src/contexts/: AuthContext.tsx
fronted/src/routes/: ContestDetails.tsx  CreateContest.tsx  CreateTask.tsx  Home.tsx  Login.tsx  ManageTestCases.tsx  Profile.tsx  Ranking.tsx  Register.tsx  Settings.tsx  Standings.tsx  Submissions.tsx  SystemLogs.tsx  TaskDetail.tsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/css/: index.css
frontend/src/routes/: RoomMake.tsx  home.tsx  roomlist.tsx
frontend/src/types/: addr.tsx  room.tsx
