[package]
name    = "contentio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = "0.7"
serde_json  = "1.0"
dotenvy     = "0.15"
bcrypt      = "0.15"
tokio       = { version = "1.36",   features = ["full"] }
sqlx        = { version = "0.7",    features = ["runtime-tokio", "sqlite"] }
serde       = { version = "1.0",    features = ["derive"] }
tower-http  = { version = "0.5",    features = ["cors"] }